*SVN*

* Fixed that assume_bottom_position (in acts_as_list) could be called on items already last in the list and they would move one position away from the list #1648 [tyler@kianta.com]

* Added ActiveRecord::Base.threaded_connections flag to turn off 1-connection per thread (required for thread safety). By default it's on, but WEBrick in Rails need it off #1685 [Sam Stephenson]

* Correct reflected table name for singular associations.  #1688 [court3nay@gmail.com]

* Fixed optimistic locking with SQL Server #1660 [tom@popdog.net]

* Added ActiveRecord::Migrator.migrate that can figure out whether to go up or down based on the target version and the current

* Added better error message for "packets out of order" #1630 [courtenay]

* Fixed first run of "rake migrate" on PostgreSQL by not expecting a return value on the id #1640


*1.11.0* (5th July, 2005)

* Fixed that Yaml error message in fixtures hid the real error #1623 [Nicholas Seckar]

* Changed logging of SQL statements to use the DEBUG level instead of INFO

* Added new Migrations framework for describing schema transformations in a way that can be easily applied across multiple databases #1604 [Tobias Luetke] See documentation under ActiveRecord::Migration and the additional support in the Rails rakefile/generator.

* Added callback hooks to association collections #1549 [Florian Weber]. Example:

    class Project
      has_and_belongs_to_many :developers, :before_add => :evaluate_velocity
    
      def evaluate_velocity(developer)
        ...
      end
    end 
  
  ..raising an exception will cause the object not to be added (or removed, with before_remove).
    

* Fixed Base.content_columns call for SQL Server adapter #1450 [DeLynn Berry]

* Fixed Base#write_attribute to work with both symbols and strings #1190 [Paul Legato]

* Fixed that has_and_belongs_to_many didn't respect single table inheritance types #1081 [Florian Weber]
